# Robot-Project

projet_robots-main/: README.md  structure.txt
projet_robots-main/ESP32 BT/: mouv_bt.ino
projet_robots-main/Joystick_BT_Robot/: Joystick_BT_Robot.ino
projet_robots-main/WiFi/: WiFi_scan.cpp  code_send_mod.ino  code_wifi.ino  config.cpp  consignes.txt  liens utiles  multibot.cpp  page_web.html  sketch_flotte_Async.ino  sketch_may24d.ino  wifi_web.ino
projet_robots-main/bluetooth/: bluetooth.ino
projet_robots-main/cameraAruco/: commandesCamera.txt  commandesCamera.txt~  listerFormatsCameras.sh  videoCamera.sh  videoCamera.sh~  videoCameraRaw.sh
projet_robots-main/commuBluetoothTel/: commuBluetoothTel.ino
projet_robots-main/configBluetooth/: configBluetooth.ino
projet_robots-main/controlleur_ordi/: controller_ordi.ino  serial_controller_gui.py
projet_robots-main/gauche_droite/: gauche_droite.ino
projet_robots-main/interface_tkinter/: Interface+camera.py  appli.py  appli2.py  appli_wifi.py  co_blue.py  co_blue2.py  co_blue3.py  interface_web+camera.py  interface_web.py  testblue.py
projet_robots-main/interface_tkinter/Serveur flask/: serverbot.py
projet_robots-main/interface_tkinter/Serveur flask/templates/: index.html
projet_robots-main/marche_arret/: marche_arret.ino
projet_robots-main/worm_on_the_ceiling-main-software-marqueurs_aruco/software/marqueurs_aruco/: README  build.sh
projet_robots-main/worm_on_the_ceiling-main-software-marqueurs_aruco/software/marqueurs_aruco/src/: CMakeLists.txt  calibrate_camera_charuco.cpp  capture_video.cpp  concatenate_videos.cpp  create_grid_of_aruco_to_cut_out.cpp  detect_aruco_markers.cpp  display_image.cpp
(+25 files in other folders)
